# daacda-data

./: .gitignore  README.md  create_listperson.py  daacda-data.xpr  dl_from_arche.py  enrich_listperson.py  main.py  make_index_files.sh  organize_data.py  pyproject.toml  tei_template.xml
data/editions/: a-00001.xml  a-00002.xml  a-00003.xml  a-00004.xml  a-00005.xml  a-00006.xml  a-00007.xml  a-00008.xml  a-00009.xml  a-00010.xml  a-00011.xml  a-00012.xml  a-00013.xml  a-00014.xml  a-00015.xml  a-00016.xml  a-00017.xml  a-00018.xml  a-00019.xml  a-00020.xml  a-00021.xml  a-00022.xml  a-00023.xml  a-00024.xml  a-00025.xml  a-00026.xml  a-00027.xml  a-00028.xml  a-00029.xml  a-00030.xml  a-00031.xml  a-00032.xml  a-00033.xml  a-00034.xml  a-00035.xml  a-00036.xml  a-00037.xml  a-00038.xml  a-00039.xml  a-00040.xml  (+1787 more)
data/indices/: listorg.xml  listperson.xml  listplace.xml
data/meta/: about.xml
