[project]
name = "daacda-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acdh-tei-pyutils>=1.6",
    "csae-pyutils>=0.2",
    "pip>=25.1.1",
    "rdflib>=7.1.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
